hitbox fix & jump animation

--- a/style.css
+++ b/style.css
@@ -116,10 +116,10 @@ body.debug-hitbox .dino-hitbox {
 .obstacle {
     height: 150px;
     width: 150px;
-    background-color: red;
-    border: 3px solid black;
+    /* background-color: red; */
+    /* border: 3px solid black; */
     position: absolute;
-    bottom: 0;
+    bottom: -23px;
     left: 100%;
     /* higher the second value of animation property slower the movement of obstacle*/
 }
